# fastapi-warehouse-store

./: .pre-commit-config.yaml  README.md  pyproject.toml
fastapi_warehouse_store/: main.py
fastapi_warehouse_store/config/: __init__.py  settings.py
fastapi_warehouse_store/db/: __init__.py  models.py
fastapi_warehouse_store/routers/: product.py
fastapi_warehouse_store/warehouse/: __init__.py  schema.py
src/db/: __init__.py
src/store/: constants.py  main.py  models.py  schema.py
src/store/routers/: order.py
src/store/tasks/: __init__.py
src/warehouse/: main.py  models.py  schema.py
src/warehouse/routers/: product.py
