[project]
name = "fastapi-warehouse-store"
description = ""
authors = [{ name = "Nhat Tai NGUYEN", email = "nhattai.nguyen88@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12, <4"
dynamic = ["version"]
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "poetry-dynamic-versioning (>=1.8.0,<2.0.0)",
    "poetry-plugin-sort (>=0.3.0,<0.4.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "redis-om (>=0.3.3,<0.4.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)"
]

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry]
version = "0.0.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.3"
black = "^25.1.0"
fastapi = { extras = ["all"], version = "^0.115.11" }
isort = "^6.0.1"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
pylint = "^3.3.6"
pytest = "^8.3.5"
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Ruff
[tool.ruff]
line-length = 88
exclude = [".git", ".venv"]
target-version = "py312"

[tool.ruff.lint]
ignore = []

# Pylint
[tool.pylint.MAIN]
ignore = [".venv"]

[tool.pylint."messages control"]
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "useless-import-alias",
]

# isort
[tool.isort]
skip = ["__init__.py"]
